# navigation2-cuda-mppi

./: .bashrc  .clang-format  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
nav2_mppi_controller/: CMakeLists.txt
nav2_mppi_controller/benchmark/: CMakeLists copy.txt  CMakeLists.txt  controller_benchmark.cpp  controller_benchmark_old.cpp  gpu_controller_benchmark.cpp
nav2_mppi_controller/src/: optimizer.cpp
nav2_mppi_controller/src/critics/: goal_angle_critic.cu  goal_critic.cpp  goal_critic.cu  obstacles_critic.cu
